Use README.md as doxygen main page

--- a/bufdumplib.3
+++ b/bufdumplib.3
@@ -265,7 +265,7 @@ Write a comma-delimited hex byte array (e\&.g\&. for use in C source) into a fil
 On success, count of byte array\&. On error, a negative value\&.
 .RE
 .PP
-\fBExamples\fP
+\fBExample\fP
 .br
  Given the same C data buffer as above:
 .br
@@ -293,7 +293,8 @@ On success, count of byte array\&. On error, a negative value\&.
 
 .fi
 .PP
- 
+.PP
+This example can be found in examples/textexample\&.c 
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for bufdumplib from the source code\&.
